[package]
name = "battery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
iced = { git = "https://github.com/iced-rs/iced.git", features=["canvas"]}
iced_native ={git = "https://github.com/iced-rs/iced.git" }
iced_lazy ={git = "https://github.com/iced-rs/iced.git" }
plotters = "0.3.2"
