[package]
name = "battery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
iced = { version = "0.4.2", features=["canvas", "tokio"]}
iced_native ={version = "0.5.1" }
iced_futures ={version = "0.4.1" }
iced_lazy ={version = "0.1.1" }
plotters = "0.3.2"
plotters-iced="0.3.1"
